Stat Format Correction

--- a/StatFiltering/NHLM_Stat_Filtering.ipynb
+++ b/StatFiltering/NHLM_Stat_Filtering.ipynb
@@ -627,7 +627,7 @@
       },
       "source": [
         "required_center_stats_for_multipliers = ['goals', 'assists', 'points', 'plusMinus', 'penaltyMinutes', 'ppGoals', 'ppAssists', 'ppPoints', 'shGoals', 'shAssists',\n",
-        "                                         'shPoints', 'gameWinningGoals', 'totalFaceOffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
+        "                                         'shPoints', 'gameWinningGoals', 'totalFaceoffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
         "\n",
         "center_comp_stats_df = center_r2_df.apply(pd.Series.describe, axis=1)\n",
         "center_stats_to_use = center_comp_stats_df.index[(center_comp_stats_df['mean'] >= 0.125) & (center_comp_stats_df['max'] >= 0.375)].tolist()\n",
@@ -761,7 +761,7 @@
       },
       "source": [
         "required_wing_stats_for_multipliers = ['goals', 'assists', 'points', 'plusMinus', 'penaltyMinutes', 'ppGoals', 'ppAssists', 'ppPoints', 'shGoals', 'shAssists',\n",
-        "                                         'shPoints', 'gameWinningGoals', 'totalFaceOffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
+        "                                         'shPoints', 'gameWinningGoals', 'totalFaceoffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
         "\n",
         "wing_comp_stats_df = wing_r2_df.apply(pd.Series.describe, axis=1)\n",
         "wing_stats_to_use = wing_comp_stats_df.index[(wing_comp_stats_df['mean'] >= 0.125) & (wing_comp_stats_df['max'] >= 0.375)].tolist()\n",
@@ -898,7 +898,7 @@
       },
       "source": [
         "required_defenceman_stats_for_multipliers = ['goals', 'assists', 'points', 'plusMinus', 'penaltyMinutes', 'ppGoals', 'ppAssists', 'ppPoints', 'shGoals', 'shAssists',\n",
-        "                                         'shPoints', 'gameWinningGoals', 'totalFaceOffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
+        "                                         'shPoints', 'gameWinningGoals', 'totalFaceoffWins', 'totalFaceoffLosses', 'shifts', 'shots', 'hits', 'blockedShots']\n",
         "\n",
         "defenceman_comp_stats_df = defenceman_r2_df.apply(pd.Series.describe, axis=1)\n",
         "defenceman_stats_to_use = defenceman_comp_stats_df.index[(defenceman_comp_stats_df['mean'] >= 0.125) & (defenceman_comp_stats_df['max'] >= 0.375)].tolist()\n",
